# Syntra

./: .dockerignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DEMOS.md  Dockerfile  PITCH.md  POSITIONING.md  README.md  ROADMAP.md  SECURITY.md  agent.md  docker-compose.yml
.github/workflows/: ci.yml  publish-demo-image.yml
Lycan/: Cargo.toml  agent.md
Lycan/docs/: learning.md
Lycan/examples/: calculator.lyc  demo_edge_of_chaos.lyc
Lycan/src/: agent.rs  auth_tokens.rs  backup.rs  binary.rs  capabilities.rs  capsule.rs  change_detection.rs  conformal.rs  context.rs  evolution_loop.rs  evolve.rs  feature_schema.rs  graph.rs  graph_executor.rs  hierarchical.rs  hierarchical_state.rs  learning.rs  lib.rs  linucb.rs  main.rs  meta_bandit.rs  ood.rs  optimizer.rs  parser.rs  rate_limit.rs  reward_characterization.rs  shared_state_strategy.rs  store.rs  warmup.rs
Lycan/tests/: change_detection_characterization.rs
demos/: README.md
deploy/: README.md
deploy/grafana/: README.md
deploy/terraform/: README.md
deploy/try-instance/: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  (+4 more)
docker/: Dockerfile.demo  README.md
docs/: api.md  capsule-authoring-mvp.md  capsule-schema.md  concepts.md  console.html  deployment.md  known-issues.md  openapi.yaml  operating.md  roadmap.md  runbook.md  tutorial.md  whats-new-G-H.md
examples/: README.md  demo-llm-model-routing.sh  demo-static-policy-vs-syntra.sh  demo_llm_model_router.lyc
examples/syntra-rs/: Cargo.toml  README.md
examples/syntra-rs/examples/: retry_basic.rs
examples/syntra-rs/src/: error.rs  lib.rs  retry.rs
examples/syntra-rs/tests/: retry.rs
scripts/: demo-boundary-api-tests.sh  run-demo.sh  smoke-test.sh
sidecar/: README.md  pyproject.toml
sidecar/examples/: datadog.yaml  mixed.yaml  prometheus.yaml  sql.yaml
sidecar/syntra_ingest/: __init__.py  __main__.py  cache.py  config.py  poller.py  server.py  sources.py
src/: authoring.rs  capsule_compiler.rs  capsule_spec.rs  lib.rs  main.rs  simulate.rs
templates/: env.example  policy.json
tests/: auth_routes.rs  syntra_cli.rs
(+306 files in other folders)
