[package]
name = "syntra"
version = "0.2.0"
edition = "2024"
description = "Syntra — self-hosted adaptive capsule appliance built on Lycan"

[[bin]]
name = "syntra"
path = "src/main.rs"

[dependencies]
lycan = { git = "https://github.com/SectorOPS/Lycan", tag = "v0.2.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
