[package]
name = "syntra-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust client for Syntra, a self-hosted contextual-bandit appliance"
license = "Apache-2.0"
repository = "https://github.com/SectorOPS/Syntra"
readme = "README.md"
keywords = ["bandit", "contextual", "retry", "syntra"]
categories = ["api-bindings"]

# Standalone crate: do not get pulled into any parent workspace. The empty
# [workspace] section tells Cargo this directory is its own workspace root.
[workspace]

[lib]
name = "syntra_client"
path = "src/lib.rs"

[[example]]
name = "retry_basic"
path = "examples/retry_basic.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
# We use a hand-rolled std::net::TcpListener-based stub server in tests/ to
# keep dev-deps minimal. See tests/retry.rs and README.md.
serde_json = "1"
